# mmfutils

./: .coveragerc  .hgignore  .hgrc  .readthedocs.yml  Makefile  README.ipynb  README.rst  conda_build_config.yaml  environment._test2.yml  environment._test3.yml  environment.yml  meta.yaml  pytest.ini  requirements.txt  requirements_rtd.txt  setup.cfg  setup.py  tox.ini
doc/: Animation.ipynb  Animation.py  DVR Basis.py  Makefile  Performance.py  Plotting.py  README.ipynb  README.py  Wigner Ville.ipynb  Wigner Ville.py
doc/Notes/: Optimization.py  README.rst  Uncertainties.ipynb  Uncertainties.py  optimization_notes.py
doc/source/: README_files  conf.py  index.rst  mmfutils.containers.rst  mmfutils.contexts.rst  mmfutils.debugging.rst  mmfutils.interface.rst  mmfutils.math.bases.bases.rst  mmfutils.math.bases.interface.rst  mmfutils.math.bases.interfaces.rst  mmfutils.math.bases.rst  mmfutils.math.bases.utils.rst  mmfutils.math.bessel.rst  mmfutils.math.differentiate.rst  mmfutils.math.integrate.rst  mmfutils.math.linalg.rst  mmfutils.math.rst  mmfutils.math.special.rst  mmfutils.math.wigner.rst  mmfutils.monkeypatches.rst  mmfutils.optimize.rst  mmfutils.parallel.rst  mmfutils.performance.blas.rst  mmfutils.performance.fft.rst  mmfutils.performance.numexpr.rst  mmfutils.performance.rst  mmfutils.performance.threads.rst  mmfutils.plot.animation.rst  mmfutils.plot.cmaps.rst  mmfutils.plot.colors.rst  mmfutils.plot.contour.rst  mmfutils.plot.errors.rst  mmfutils.plot.publish.rst  mmfutils.plot.rasterize.rst  mmfutils.plot.rst  mmfutils.plot.viridis.rst  mmfutils.rst  mmfutils.solve.broyden.rst  mmfutils.solve.rst  mmfutils.testing.rst
doc/source/_static/: mathconf.js
doc/source/_templates/: layout.html
mmfutils/: __init__.py  containers.py  contexts.py  debugging.py  interface.py  monkeypatches.py  optimize.py  parallel.py
mmfutils/math/: bessel.py  differentiate.py  linalg.py  special.py
mmfutils/math/bases/: bases.py  interface.py  (+1 more)
mmfutils/performance/: blas.py  fft.py  numexpr.py  threads.py
mmfutils/plot/: __init__.py  animation.py  colors.py  contour.py  errors.py  publish.py  rasterize.py
mmfutils/solve/: broyden.py
mmfutils/tests/: test_codeing_format.py  test_containers.py  test_context.py  test_debugging.py  test_differentiate.py  test_interface.py  test_monkeypatchs.py  test_parallel.py  test_performance_blas.py  test_performance_fft.py  test_performance_threads.py  test_plot.py
setup_tests/: drone.io.sh
(+8 files in other folders)
