[metadata]
description-file = README.rst

[nosetests]
verbosity=3
detailed-errors=1

with-doctest=1
doctest-tests=1
doctest-options=+ELLIPSIS,+NORMALIZE_WHITESPACE

with-coverage=1
cover-package=mmfutils
cover-html=True
cover-html-dir=build/_coverage
cover-min-percentage=100

pdb=0

[flake8]
# E221 Spaces before operators (x = 4  + 4)
# E225 Requires space arround *all* operators (I like compact x**2 for example.)
# E226 Requires whitespace around arithmetic operators
# E241 Extra spaces after commas a = (1,  2) is not allowed
# W293 Blank line containes whitespace
ignore = E225,E226,W293
#jobs=1
max-complexity = 12
